# OhtuTube

./: .coveragerc  .env.test  .gitignore  .pylintrc  LICENSE  README.md  log.html  output.xml  pyproject.toml  pytest.ini  report.html  tasks.py  test_database.db
.github/workflows/: main.yml
documents/: demo_references.bib  loppuraportti.md  robot_test_log.html
src/: AppLibrary.py  ReferencesLibrary.py  bib_config.py  build.py  config.py  console_io.py  database_connection.py  generated_file.bib  index.py  initialize_database.py  stub_io.py
src/bibfiles/: README.md
src/bibtex_data/: references.bib
src/entities/: book_reference.py
src/repositories/: references_repository.py
src/services/: generate_reference_id.py  read_bibfile_service.py  reference_service.py
src/tests/: __init__.py  bibtex.robot  book_references.robot  import.robot  language.robot  remove.robot  resource.robot  search_references.robot  validation.robot
src/tests/entities/: book_reference_test.py
src/tests/repositories/: references_repository_test.py
src/tests/robot/: add_data.robot  resource.robot
src/tests/services/: bibfile.py  generate_reference_id_test.py  read_bibfile_service_test.py  reference_service_test.py
src/tests/ui/: ui_test.py
src/ui/: io.py  language_display.py  stub_io.py  ui.py  ui_menu.py
