[tool.poetry]
name = "ohtutube"
version = "0.1.0"
description = ""
authors = ["Janne Kärki <janne.karki@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
